--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Google</title>
-  <link href="styles/cssreset.css" rel="stylesheet" type="text/css" media="all">
-  <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+  <link href="cssreset.css" rel="stylesheet" type="text/css" media="all">
+  <link href="style.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
@@ -14,10 +14,10 @@
   <nav class="main-nav">
     <a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail</a>
     <a href="https://www.google.fr/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a>
-    <a href="https://www.google.fr/intl/en/about/products?tab=wh"><img src="Images/google-apps.png"></a>
+    <a href="https://www.google.fr/intl/en/about/products?tab=wh"><img src="google-apps.png"></a>
     <a
       href="https://accounts.google.com/ServiceLogin?hl=en&amp;passive=true&amp;continue=https://www.google.co.uk/%3Fgws_rd%3Dssl"><img
-        src="Images/sign-in.png"></a>
+        src="sign-in.png"></a>
   </nav>
 </header>
 
@@ -28,7 +28,7 @@
     <img src="googlelogo.png" alt="Google" class="logo">
 
     <div class="search-bar-container">
-      <img id="search-logo" src="Images/magnifying-glass.png" height="20" width="20">
+      <img id="search-logo" src="magnifying-glass.png" height="20" width="20">
       <input class="search-bar">
     </div>
 
