--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Google Clone</title>
-
+  <title>Google</title>
   <link href="cssreset.css" rel="stylesheet" type="text/css" media="all">
   <link href="style.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
